@@ -1,5 +1,8 @@
 * What's new in version 4.2, PRERELEASE
 
+- The sys/sdt.h file changes the way i386 registers operands are
+  sometimes named, due to an ambiguity.  A comment block explains.
+
 * What's new in version 4.1, 2019-05-07
 
 - Runtime/tapsets were ported to include up to kernel version 5.1-rc2
